# bible-plan-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bible_plan_generator/cli/: __init__.py
src/bible_reading_plan_generator/: __init__.py
src/bible_reading_plan_generator/generator/: __init__.py
