[project]
name = "bible-reading-plan-generator"
version = "0.1.0"
dependencies = ["pydantic (>=2.11.7,<3.0.0)"]

[tool.poetry]
packages = [
    { include = "bible_reading_plan_generator", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
